# parcheesi

./: Board.cpp  Board.h  CMakeLists.txt  Die.cpp  Die.h  MainWindow.cpp  MainWindow.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  README.md  Tile.cpp  Tile.h  main.cpp  rules.txt
